--- a/product-detail.html
+++ b/product-detail.html
@@ -583,7 +583,7 @@
   </div>
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://github.com/eum/uniproduct-proto/js/slick.min.js"></script>
+<script src="https://eum.github.io/uniproduct-proto/js/slick.min.js"></script>
 <script>
   function openTabDetail(evt, tabName) {
     var i, x, tablinks;
