in js add type and modify url

--- a/product-detail.html
+++ b/product-detail.html
@@ -18,6 +18,10 @@
   <link rel="apple-touch-icon" sizes="76x76" href="http://im.uniqlo.com/jp/spa/apple-touch-icon-76x76_1433636775548.png">
   <link rel="apple-touch-icon" sizes="120x120" href="http://im.uniqlo.com/jp/spa/apple-touch-icon-120x120_1433636775620.png">
   <link rel="apple-touch-icon" sizes="152x152" href="http://im.uniqlo.com/jp/spa/apple-touch-icon-152x152_1433636775861.png">
+
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/slick.min.js"></script>
+  
   <style>
 
   </style>
@@ -582,8 +586,7 @@
     </div>
   </div>
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://eum.github.io/uniproduct-proto/js/slick.min.js"></script>
+
 <script>
   function openTabDetail(evt, tabName) {
     var i, x, tablinks;
