modify jquery url as slick original defined

--- a/product-detail.html
+++ b/product-detail.html
@@ -19,9 +19,11 @@
   <link rel="apple-touch-icon" sizes="120x120" href="http://im.uniqlo.com/jp/spa/apple-touch-icon-120x120_1433636775620.png">
   <link rel="apple-touch-icon" sizes="152x152" href="http://im.uniqlo.com/jp/spa/apple-touch-icon-152x152_1433636775861.png">
 
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="js/slick.min.js"></script>
-  
+
   <style>
 
   </style>
