--- a/product-detail.html
+++ b/product-detail.html
@@ -441,7 +441,9 @@
       <div id="myModal" class="modal">
         <div class="modalBg" style="opacity: 0.5;"></div>
         <div class="modalDialog">
-          <div id="myModalClose" class="modalClose"></div>
+          <div class="modalCloseIconWrap">
+            <div class="modalCloseIcon"></div>
+          </div>
           <div class="modalContent">
             <div id="popCartBtnWrapper" class="">
               <!-- Cart Buttons Wrapper-->
@@ -576,7 +578,8 @@
                 <div id="myModalClose" class="modalCloseWrap">
                   <p class="btnModalClose">閉じる</p>
                 </div>
-                </div>
+
+                <div class="modalCloseIconWrap"><p>CLOSE</p></div>
 
               </section>
             </div>
@@ -608,10 +611,11 @@
 <script>
   var modal = document.getElementById('myModal');
   var modalopen = document.getElementById("myBtn");
-  var modalclose = document.getElementsByClassName("modalClose")[0];
-  var modalclose = document.getElementsByClassName("modalCloseWrap")[0];
+  var modalclosebyicon = document.getElementsByClassName("modalCloseIconWrap")[0];
+  var modalclosebybutton = document.getElementsByClassName("btnModalClose")[0];
   modalopen.onclick= function() { modal.style.display = "block"; }
-  modalclose.onclick = function() { modal.style.display = "none"; }
+  modalclosebyicon.onclick = function() { modal.style.display = "none"; }
+  modalclosebybutton.onclick = function() { modal.style.display = "none"; }
 </script>
 
 <script>
